// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logo applies custom container style 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      },
      {
        "backgroundColor": "red",
        "marginTop": 10,
      },
    ]
  }
/>
`;

exports[`Logo applies custom image style 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
/>
`;

exports[`Logo renders with default props 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
/>
`;

exports[`Logo renders with large size 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
/>
`;

exports[`Logo renders with small size 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
/>
`;
